# mcp-workshop

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  go.mod  go.sum  mcp.json
.claude/agents/: code-developer.md  code-reviewer.md  code-tester.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  trivy.yml
01-basic-mcp/: README.md  server.go
01-example-basic-gin/: server.go  tool.go
02-basic-token-passthrough/: README.md  server.go
02-example-basic-token-passthrough/: server.go
03-oauth-mcp/: README.md
03-oauth-mcp/client/: README.md  client.go
03-oauth-mcp/client-credentials/: README.md  TESTING.md  server.go
03-oauth-mcp/client-credentials/client-python/: client.py  pyproject.toml
03-oauth-mcp/dcr/: README.md  rfc8707-test.md
03-oauth-mcp/issuer-identification/: README.md  TESTING.md  mixup.excalidraw
03-oauth-mcp/oauth-client/: client.go
03-oauth-mcp/oauth-server/: README.md  auth_meta.go  middleware.go  oauth_provider.go  provider_gitea.go  provider_github.go  provider_gitlab.go  provider_gitlab_test.go  server.go
03-oauth-mcp/server/: provider_github.go  server.go
04-observability/: README.md  server.go
05-mcp-proxy/: README.md  config.json
example-basic-gin/: server.go
example-oauth-service/: server.go
pkg/core/: core.go  store.go
pkg/logger/: logger.go
pkg/mocks/: mock.go  mock_store.go
pkg/operation/: mcp.go  operation.go
pkg/store/: FACTORY.md  README.md  example_factory_test.go  factory.go  factory_test.go  memory.go  memory_test.go  (+2 more)
(+30 files in other folders)
