[project]
name = "client-credentials-mcp-client"
version = "0.1.0"
description = "Python MCP client that verifies the client-credentials MCP server via the OAuth 2.0 Client Credentials extension."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28.1",
    "python-multipart>=0.0.31",
    # Transitive via mcp -> pyjwt[crypto]; constrained here only as a security
    # floor. 48.0.1 patches the bundled-OpenSSL advisory while still shipping
    # Intel-macOS (universal2) and win32 wheels, which 49.x dropped.
    "cryptography>=49.0.0,<50",
]
